# demo-fsm

./: README.md  demo-fsm.cabal
src/: FSM.hs
test/: FSMSpec.hs
