name:                demo-fsm
version:             0.1
synopsis:            Конечные автоматы.
-- description:
homepage:            https://github.com/cmc-haskell-2017/demo-fsm#readme
license:             MIT
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2017 Nickolay Kudasov
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FSM
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite demo-fsm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , demo-fsm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2017/demo-fsm
